--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     <img src="/images/hi.png" alt="hi">
                 </div>
                 <p>
-                    A passionate Full Stack Developer having an experience of building Web and Mobile
-                    applications with JavaScript/ReactJs/NodeJs/React Native and some other cool libraries
+                    A passionate Full Stack Developer with experience in building Web and Mobile
+                    applications with JavaScript/ReactJS/NodeJS/React Native and some other cool libraries
                     and frameworks
                 </p>
                 <div id="icons">
@@ -52,7 +52,7 @@
                     <button class="btn"><a href="https://www.linkedin.com/in/nikhil-kushwaha-275a72207/">Contact Me</a>
                     </button>
                     <button class="btn"><a
-                            href="https://drive.google.com/file/d/1GS5eSxoRAPqHFc2VLg3j-tEDcRAglPCc/view?usp=sharing">See
+                            href="https://drive.google.com/file/d/1PZFDkciknDK1ndrEnz_GSksF3vlUYa-g/view?usp=drive_link">See
                             My Resume</a> </button>
                 </div>
             </div>
@@ -68,7 +68,7 @@
             <div id="h2-txt">
                 <div class="h2-heading">
                     <h1>What i do</h1>
-                    <h5>Crazy full stack developer who want to explore every tech stack</h5>
+                    <h5>Crazy full-stack developer who wants to explore every tech stack</h5>
                     <img src="/images/h2-txt.jpeg" alt="all tech logo">
                 </div>
                 <div class="h2-heading2">
@@ -128,7 +128,7 @@
 
                 <div class="h4-left">
                     <h2>developerFolio</h2>
-                    <h5>Software Developer Portfolio Template that help you showcase your work and skills as developer
+                    <h5>Software Developer Portfolio Template that helps you showcase your work and skills as a developer
                         software
                         <span><i class="fa fa-solid fa-bolt" style="color: gold;"></i></span>
                     </h5>
@@ -141,7 +141,7 @@
 
                 <div class="h4-left">
                     <h2>Grocery-Items Detection</h2>
-                    <h5>Grocery Items Detection using Tenserflow and IBM Watson.
+                    <h5>Grocery Items Detection using Tensorflow and IBM Watson.
                         <span><i class="fa fa-solid fa-camera-retro"></i></span>
                     </h5>
                     <div class="icons">
@@ -193,7 +193,7 @@
 
         <div id="home5">
             <h1>Big Projects</h1>
-            <h4>Some startups and companies that i help to create their tech</h4>
+            <h4>Some startups and companies that I help create their tech</h4>
             <div class="h5-img">
                 <img src="/images/saaya.jpg" alt="saaya-logo" class="h5-img1">
                 <img src="/images/nextu.png" alt="nextu-logo" class="h5-img2">
@@ -203,12 +203,12 @@
         <div id="home6">
             <h1>Achievements And Certifications <span><i class="fa fa-solid fa-trophy" style="color: gold;"></i></span>
             </h1>
-            <h4>Achievements, certifications award letters and some cool stuff that i have done ! </h4>
+            <h4>Achievements, certifications, award letters, and some cool stuff that I have done! </h4>
             <div class="h6-img">
                 <div class="h6-img1">
                     <img src="/images/gcodein.png" alt="google-code-in-logo">
                     <h2>Google Code-In Finalist</h2>
-                    <p>First Pakistani to be selected as Google Google-in Finalist from 4000 students from 77 different
+                    <p>First Pakistani to be selected as a Google Google-in Finalist from 4000 students from 77 different
                         countries.</p>
                     <pre>Certifiacation       Award Letter</pre>
                     <span class="media-element">Certifiacation</span>
@@ -219,7 +219,7 @@
                 <div class="h6-img1">
                     <img src="/images/gassis.jpeg" alt="google-assistence-logo">
                     <h2>Google Assistant Action</h2>
-                    <p>Developed a Google Assistant Action JavaScript Guru that is available on 2 Billion devices world
+                    <p>Developed a Google Assistant Action JavaScript Guru that is available on 2 billion devices worldwide
                         wide.</p>
                     <pre></pre>
                     <h3>View Google Assistant Action</h3>
@@ -238,11 +238,11 @@
 
         <div id="home7">
             <h1>Blogs</h1>
-            <h4>With love for developing cool stuff. i love to write and teach others what i have learned</h4>
+            <h4>With love for developing cool stuff. I love to write and teach others what I have learned</h4>
             <div class="h7-img">
                 <div class="h7-img1 h7-shadow h7-img1-bg">
-                    <h2>Win a Google Assistant Tshirt and $200 in Google Cloud Credits</h2>
-                    <p>Do you want to win $200 and Google Assistant Tshirt by creating a Google Assistant Action in less
+                    <h2>Win a Google Assistant T-shirt and $200 in Google Cloud Credits</h2>
+                    <p>Do you want to win $200 and a Google Assistant T-shirt by creating a Google Assistant Action in less
                         then 30 min.</p>
                 </div>
 
@@ -300,7 +300,7 @@
 
         <footer id="foot">
             <h1>Reach Out to me!</h1>
-            <h3>Discuss a project or just want to say hi my inbox is open for all</h3>
+            <h3>Discuss a project or just want to say hi, my inbox is open for all</h3>
             <div class="foot-txt">
                 <div class="foot-txt1">
                     <h2>"First Indian Google Code-In Finalist | Software Developer | Open Source Contributor <span><i
